[package]
name = "redis-stream-reactor"
version = "0.0.1-beta.30"
edition = "2021"
description = "Redis consumer group reactor"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/redis-stream-reactor/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
backoff = { version = "0.4.0", features = ["tokio"] }
env-url = "2.0.3"
futures = "0.3"
log = "0.4"
rand = "0.8.5"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
redis-swapplex = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.34"
tokio = { version = "1", features = ["macros", "signal"] }
tokio-util = "0.7.4"

[dev-dependencies]
decimal = "2.1.0"
serde-aux = "4.0.0"
serde_with = { version = "2.0.1", features = ["json"] }
